Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16733

mysqldump --tab and --xml options are conflicting

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Trivial
    • Resolution: Fixed
    • 5.5(EOL), 10.0(EOL), 10.1(EOL), 10.2(EOL), 10.3(EOL)
    • 10.11.1
    • Backup
    • None

    Description

      Reproduce

      mysqldump -T/tmp -uroot --xml test
      

      Result

      Command succeeded, files created under /tmp.
      Following is written to STDOUT:

      <database name="test">
      </database>
      

      Expected

      Error: can't set --xml option while --tab is specified.

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              midenok Aleksey Midenkov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: