MDEV-16733 mysqldump --tab and --xml options are conflicting